Changes for CSCL on 7th Mar 2020

--- a/egov/egov-config/src/main/resources/messages/common-labels.properties
+++ b/egov/egov-config/src/main/resources/messages/common-labels.properties
@@ -136,7 +136,7 @@ lbl.number=Number
 lbl.userName=UserName
 lbl.street=Street
 lbl.election.ward=Election Ward
-lbl.egov.header=eGov Urban Portal
+lbl.egov.header=Chandigarh e-Finance
 lbl.egov.foundation=eGovernments Foundation
 lbl.powerby=Powered by
 lbl.process.wait=Processing your request. Please wait..
@@ -174,3 +174,6 @@ lbl.installmentyear=Installment Year
 lbl.default.all=All
 lbl.grandtotal=Grand Total
 lbl.total=Total
+
+#Changes
+lbl.sdocuments=Supporting Documents
