--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -356,3 +356,19 @@ msg.bank.entries.not.in.bank.book.details=Bank Entries Not In Bank Book Details
 msg.deleting.data.successful=Deleting data is successful
 msg.this.row.cant.be.deleted=This row can not be deleted
 msg.error.while.deleting.data=Error while deleting data
+
+chq.assignment.pex.refno=PEX Reference Number
+chq.assignment.pex.date=PEX Date
+chq.pex.assignment.search.heading=PEX Ref.No Assignment Search
+chq.assignment.pex.transacton.no=PEX Ref.Number
+chq.assignment.pex.transaction.date=PEX Date
+surrender.pex.search = Surrender PEX Search
+chq.assignment.pex.amount=PEX Amount
+surrender.pex=Surrender PEX
+pex=PEX
+pex.transaction.success=Processing done successfully
+
+
+
+
+
