--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/report/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/report/package.properties
@@ -339,3 +339,8 @@ msg.please.selet.bank.account=Please select a Bank Account
 msg.please.enter.start.date=Please enter start date
 msg.please.enter.end.date=Please enter end date
 
+report.pexassignedfromdate = PEX Assigned From Date
+report.pexassignedtodate = PEX Assigned To Date
+report.pexnumber=PEX Number
+pex.issueregister.report = PEX IssueRegister Report
+pex.issue.report= PEX Issue Report
