--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -538,3 +538,5 @@ lbl.budget.definition=Budget Definition
 lbl.budget.definition.search.result=Budget Definition Search Result
 lbl.budget.upload.report=Budget Upload Report
 lbl.budget.upload.report.result=Budget Upload Report Result
+lbl.sdocuments.value=Download
+lbl.sdocuments.name=UploadedDocuments
