--- a/egov/egov-egi/src/main/resources/config/application-config.properties
+++ b/egov/egov-egi/src/main/resources/config/application-config.properties
@@ -228,6 +228,7 @@ multitenancy.enabled=true
 
 #Default tenant domain to schema mapping
 tenant.localhost=generic
+tenant.ch.csgs.chandigarhsmartcity.in=ch
 
 #-----------------------------------Multi Tenancy Settings Ends-----------------------------------#
 
@@ -363,18 +364,18 @@ analytics.config=
 #-----------------------------------Microservice Settings Starts--------------------------------#
 egov.collection.version=V2
 
-egov.default.services.endpoint=https://egov-micro-dev.egovernments.org/
-egov.hrms.service.endpoint=https://egov-micro-dev.egovernments.org/
-egov.accesscontrol.service.endpoint=https://egov-micro-dev.egovernments.org/
-egov.hr.masters.service.endpoint=https://egov-micro-dev.egovernments.org/
-egov.user.service.endpoint=https://egov-micro-dev.egovernments.org/
-egov.common.masters.endpoint=https://egov-micro-dev.egovernments.org/
-egov.billing.service.endpoint=http://localhost:8096/
-egov.collection.service.endpoint=http://localhost:8095/
-egov.egf.master.service.endpoint=https://egov-micro-dev.egovernments.org/
-egov.egf.instrument.service.endpoint=http://localhost:8097
-egov.mdms.service.endpoint=http://localhost:8094/
-egov.indexer.service.endpoint=https://egov-micro-dev.egovernments.org/
+egov.default.services.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.hrms.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.accesscontrol.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.hr.masters.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.user.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.common.masters.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.billing.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.collection.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.egf.master.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.egf.instrument.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.mdms.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.indexer.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
 
 egov.services.user.approvers.url=egov-hrms/employees/_search
 
@@ -426,8 +427,8 @@ egov.finance.indexer.egbill.topic.name=finance-bill-topic
 egov.finance.indexer.voucher.topic.name=finance-voucher-topic
 finance-rollout-dashboard-cron-expression=0 0 * ? * *
 #--------------------------------------SystemIntegration User Details ----------------------------------------#
-si.microservice.user=
-si.microservice.password=
+si.microservice.user=SIFINANCE
+si.microservice.password=sifinance123@
 si.microservice.usertype=SYSTEM
 si.microservice.scope=read
 si.microservice.granttype=password
