Finance changes and egov removed

--- a/egov/egov-config/src/main/resources/messages/common-labels.properties
+++ b/egov/egov-config/src/main/resources/messages/common-labels.properties
@@ -43,7 +43,7 @@
 #            or trademarks of eGovernments Foundation.
 #
 #   In case of any queries, you can reach eGovernments Foundation at contact@egovernments.org.
-msg.urban.portal=eGov Urban Portal
+msg.urban.portal=
 lbl.egov=eGovernments Foundation
 lbl.copyright=Copyright
 lbl.select=Select
@@ -137,11 +137,12 @@ lbl.userName=UserName
 lbl.street=Street
 lbl.election.ward=Election Ward
 lbl.egov.header=Chandigarh e-Finance
-lbl.egov.foundation=eGovernments Foundation
-lbl.powerby=Powered by
+lbl.egov.foundation=
+lbl.powerby=
 lbl.process.wait=Processing your request. Please wait..
 lbl.emailid=Email ID
 lbl.isactive=Active
+lbl.link=Link
 lbl.inactive=Inactive
 msg.not.applicable=Not applicable
 lbl.view=View
