--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -91,6 +91,7 @@ lbl.columnname=Column name
 lbl.attributename=Attribute name
 lbl.nbroflevels=Number of Levels
 lbl.isactive=Active
+lbl.link=Link
 lbl.fullqualifiedname=Fully Qualified Name
 title.relation.new=Create New Supplier
 title.relation.view=View Supplier
