--- a/egov/egov-egi/src/main/resources/config/application-config.properties
+++ b/egov/egov-egi/src/main/resources/config/application-config.properties
@@ -228,7 +228,7 @@ multitenancy.enabled=true
 
 #Default tenant domain to schema mapping
 tenant.localhost=generic
-tenant.ch.csgs.chandigarhsmartcity.in=ch
+tenant.chandigarh-dev.csgs.chandigarhsmartcity.in=ch.chandigarh
 
 #-----------------------------------Multi Tenancy Settings Ends-----------------------------------#
 
