--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -285,6 +285,7 @@ lbl.mendatory.fields=Mandatory Fields
 lbl.function.name=Function Name
 lbl.account.code=Account Code
 lbl.account.head=Account Head
+lbl.account.rate=Rate
 lbl.debit.amount=Debit Amount
 lbl.credit.amount=Credit Amount
 lbl.add=Add
