--- a/egov/egov-egi/src/main/resources/config/application-config.properties
+++ b/egov/egov-egi/src/main/resources/config/application-config.properties
@@ -228,7 +228,7 @@ multitenancy.enabled=true
 
 #Default tenant domain to schema mapping
 tenant.localhost=generic
-tenant.chandigarh-dev.csgs.chandigarhsmartcity.in=ch.chandigarh
+tenant.chandigarh-dev.chandigarhsmartcity.in=ch.chandigarh
 
 #-----------------------------------Multi Tenancy Settings Ends-----------------------------------#
 
@@ -364,18 +364,18 @@ analytics.config=
 #-----------------------------------Microservice Settings Starts--------------------------------#
 egov.collection.version=V2
 
-egov.default.services.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.hrms.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.accesscontrol.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.hr.masters.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.user.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.common.masters.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.billing.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.collection.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.egf.master.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.egf.instrument.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.mdms.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
-egov.indexer.service.endpoint=https://dev.csgs.chandigarhsmartcity.in/
+egov.default.services.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.hrms.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.accesscontrol.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.hr.masters.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.user.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.common.masters.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.billing.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.collection.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.egf.master.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.egf.instrument.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.mdms.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.indexer.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
 
 egov.services.user.approvers.url=egov-hrms/employees/_search
 
