Checked in for Finance

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
@@ -282,3 +282,4 @@ msg.please.select.fund.department.or.functionary=Please select Fund or Departmen
 msg.only.xls.files.supprted=Only .xls files are supported
 msg.select.file.to.upload=Select File to upload
 msg.file.format.not.allowed= file format is not allowed
+budget.load.sucessful.cao = Budget upload is successful and sent to Chief Accounts Officer for verification   
