--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -541,3 +541,5 @@ lbl.budget.upload.report=Budget Upload Report
 lbl.budget.upload.report.result=Budget Upload Report Result
 lbl.sdocuments.value=Download
 lbl.sdocuments.name=UploadedDocuments
+title.approvebudget.search.cao=Verify Uploaded Budget
+title.approvebudget.search.acmc=Verify Uploaded Budget
