--- a/egov/egov-egfweb/src/main/resources/messages/message.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/message.properties
@@ -132,3 +132,5 @@ msg.startingdate.endingdate.greater=From period should be prior or same as that 
 msg.startingdate.endingdate.closedperiod=Some date range is already present in the closed period.Check all closed periods and re-try.
 msg.type.first.3.letters.of.account.code=Type first 3 letters of Account code
 msg.no.documents=No Documents Attached
+msg.uploaded.budget.cao.success = Uploaded budget verified and sent to Additional Commissioner for further verification 
+msg.uploaded.budget.acmc.success = Uploaded budget verified and sent to Commissioner for Approval
