Fixes for Testing Issues and Deduction Development Code

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -187,6 +187,7 @@ link.ref.number=Link/Type No
 change.party.name=Change Party Name
 
 rtgs.assignment.remittance.pay.search.heading= RTGS Ref.No Assignment Search for Auto Remittance Payment 
+pex.assignment.remittance.pay.search.heading= PEX Ref.No Assignment Search for Auto Remittance Payment
 rtgs.assignment.remittance.pay.do = Drawing officer
 rtgs.assignment.remittance.pay.coa =  Remittance COA
 
