--- a/egov/egov-egi/src/main/resources/config/application-config.properties
+++ b/egov/egov-egi/src/main/resources/config/application-config.properties
@@ -353,7 +353,7 @@ Municipal\u0020Council=MUNICIPAL COUNCIL
 MC\u0020Class\u0020II=MUNICIPAL CORPORATION GRADE-II
 MC\u0020Class\u0020I=MUNICIPAL CORPORATION GRADE-I
 MC\u0020Class\u0020III=MUNICIPAL CORPORATION GRADE-III
-NP=Nagar Panchayat
+NP=MUNICIPAL CORPORATION
 #-----------------------------------Localization Settings Ends----------------------------------#
 
 
