Issue Fixes from Finance Testing

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/deduction/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/deduction/package.properties
@@ -82,12 +82,16 @@ remit.deduction.amount=Deduction Amount
 remit.earlier.payment=Earlier Payment
 no.data.found=No Data Found
 cash.consolidated.cheque=Consolidated Cheque
+rtgs.type.mode=RTGS
+pex.type.mode=PEX
 
 lbl.generate.payment=Generate Payment
 lbl.total.payment=Total Amount
 lbl.recovery.details=Recovery Details
 lbl.payment.amount=Payment Amount
 lbl.assign.cheque=Assign Cheque
+lbl.assign.rtgs=Assign RTGS
+lbl.assign.pex=Assign PEX
 
 msg.zero.amount.remittence.could.not.process.for.payment=Zero amount remittence could not proceed for payment.
 msg.please.select.recovery.code=Please select a recovery code
