--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -101,6 +101,8 @@ payment.chequedate.invalid=Invalid Cheque Date
 payment.duplicate.chequeno=Same cheque number {0} can not be assigned for different parties, {1} and {2}.
 
 chq.assignment.heading.search=Cheque Assignment Search
+rtgs.assignment.heading.search=RTGS Assignment Search
+pex.assignment.heading.search=PEX Assignment Search
 chq.assignment.heading.salary.search=Cheque Assignment Search for Salary Payments
 chq.assignment.heading.pension.search=Cheque Assignment Search for Pension Payments
 chq.assignment.select=Select All
@@ -113,6 +115,7 @@ chq.assignment.receipt.amount=Voucher Amount(Rs)
 chq.assignment.receipt.deductedamount=Amount deducted(Rs)
 chq.assignment.payment.amount=Payment Amount
 chq.assignment.department=Cheque Issued Department
+rtgs.assignment.department=Department
 chq.assignment.department.mandatory=Select cheque issued from
 
 chq.assignment.heading.view=Cheque Assignment View
@@ -179,6 +182,8 @@ invalid.bank = Please select a valid Bank
 invalid.date = Please select a valid Voucher Date
 invalid.voucher.number = Please enter a valid Voucher Number
 cash.consolidated.cheque=Consolidated Cheque
+rtgs.type.mode=RTGS
+pex.type.mode=PEX
 payment.chequedate.empty=Please Enter a valid Voucher Date
 inFavourOf.is.empty=Please enter InFavourOf
 Instrument\ datecannot\ be\ future\ Date=Cheque date cannot be future date  
@@ -304,6 +309,8 @@ lbl.party.name=Party Name
 lbl.cheque.date=Cheque Date
 lbl.assign.rtgs.number=Assign RTGS Number
 lbl.assign.cheque=Assign Cheque
+lbl.assign.rtgs=Assign RTGS
+lbl.assign.pex=Assign PEX
 lbl.surrender.and.reassign=Surrender & Reassign
 lbl.surrender=Surrender
 lbl.generate.bank.advice.excel=Generate BankAdvice Excel
