--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
@@ -88,7 +88,11 @@ budget.reappropriation.invalid.combination = Budget Detail with this combination
 budget.reappropriation.title = Add  Budget Additional Appropriations
 budget.reappropriation.heading = Budget Additional Appropriation
 budget.reappropriation.new.saved = Budget Additional appropriation for new combination saved successfully with the Sequence number 
-budget.reappropriation.existing.saved = Budget Additional appropriation for existing combination saved successfully with the Sequence number 
+budget.reappropriation.existing.saved = Budget Additional appropriation for existing combination saved successfully with the Sequence number
+budget.reappropriation.existing.new.saved= Budget Additional appropriation for existing combination saved successfully and forwarded to Chief Accounts officer
+budget.reappropriation.existing.cao.saved= Budget Additional appropriation for existing combination saved successfully and forwarded to Additional Commissioner
+budget.reappropriation.existing.acmc.saved= Budget Additional appropriation for existing combination saved successfully and forwarded to Commissioner
+budget.reappropriation.existing.mc.saved= Budget Additional appropriation for existing combination saved successfully and Approved
 budgetReAppropriation.asOnDate = Date
 budgetReAppropriation.comments = Comments
 budget.reappropriation.type = Type
