Development of Auto Assign Number

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
@@ -86,6 +86,7 @@ budget.reappropriation.add.release = Add/Release from existing budget line item
 budget.reappropriation.add = Add new budget line item
 budget.reappropriation.invalid.combination = Budget Detail with this combination does not exist
 budget.reappropriation.title = Add  Budget Additional Appropriations
+budget.reappropriation.verify.title = Verify  Budget Additional Appropriations
 budget.reappropriation.heading = Budget Additional Appropriation
 budget.reappropriation.new.saved = Budget Additional appropriation for new combination saved successfully with the Sequence number 
 budget.reappropriation.existing.saved = Budget Additional appropriation for existing combination saved successfully with the Sequence number
