Issue fixes from finance testing

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -119,7 +119,8 @@ rtgs.assignment.department=Department
 chq.assignment.department.mandatory=Select cheque issued from
 
 chq.assignment.heading.view=Cheque Assignment View
-chq.rtgs.assignment.heading.view=RTGS Ref.NO Assignment View
+chq.rtgs.assignment.heading.view=RTGS Ref.No Assignment View
+chq.pex.assignment.heading.view=PEX Ref.No Assignment View
 chq.rtgs.assignment.search.heading=RTGS Ref.No Assignment Search
 chq.assignment.partycode=Payee Name
 chq.assignment.partyname=Party Name
