Assign Acknowledge Code

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -68,7 +68,9 @@ total = Total
 
 chq.assignment.department.name=Department
 chq.assignment.rtgs.refno=RTGS Reference Number
+chq.assignment.generic.refno=Reference Number
 chq.assignment.rtgs.date=RTGS Date
+chq.assignment.generic.date=Date
 chq.assignment.total.rtgs.amount=RTGS Total Amount         
 chq.assignment.paymentvoucherno=Payment Voucher No.
 chq.assignment.paymentvoucherdatefrom=Payment Voucher Date From
@@ -119,6 +121,7 @@ rtgs.assignment.department=Department
 chq.assignment.department.mandatory=Select cheque issued from
 
 chq.assignment.heading.view=Cheque Assignment View
+chq.assignment.heading.generic.view=Assignment View
 chq.rtgs.assignment.heading.view=RTGS Ref.No Assignment View
 chq.pex.assignment.heading.view=PEX Ref.No Assignment View
 chq.rtgs.assignment.search.heading=RTGS Ref.No Assignment Search
@@ -132,8 +135,10 @@ chq.assignment.instrument.serialno=Year Code
 chq.assignment.instrument.newserialno=New Year Code
 chq.assignment.instrument.amount=Cheque Amount
 chq.assignment.rtgs.amount=RTGS Amount
+chq.assignment.generic.amount=Amount
 chq.assignment.instrument.date=Cheque Date
 chq.assignment.instrument.status=Status
+chq.assignment.instrument.action=Action
 chq.assignment.instrument.infavourof=In Favour Of
 chq.assignment.invalid.user=Current user doesn't have the permission to assign the cheque
 chq.not.found=No Cheque Details Found !
