--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
@@ -64,6 +64,7 @@ Works.voucher.created=Works JV Number : {0}. The File has been forwarded to {1}
 Salary.voucher.created=Salary JV Number : {0}. The File has been forwarded to {1}
 Contingency.voucher.created=Expense JV Number : {0}. The File has been forwarded to {1}
 Expense.voucher.created = Expense JV Number : {0}. The File has been forwarded to {1}
+Expense.voucher.saveAsDraft.created = Expense JV Number : {0}. The File has been {1}
 Pension.voucher.created = Pension JV Number : {0}. The File has been forwarded to {1}
 #-----------------voucher
 cancelVoucher.title=Cancel Voucher
