End Date Changes

--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -263,6 +263,7 @@ lbl.billnumber=Bill Number
 lbl.billdate=Bill Date
 lbl.party.billnumber=Party Bill Number
 lbl.party.billdate=Party Bill Date
+lbl.end.billdate=Last Date of Bill Payment
 lbl.party.bill.amount=Party Bill Amount
 lbl.billsubtype=Bill Subtype 
 lbl.billtype=Bill Type
