--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/budget/package.properties
@@ -83,6 +83,9 @@ reapp.modified.successfully = Budget Additional Appropriation modified successfu
 reApp.duplicate.entry =  Budget Additional Appropriation with this combination can be added only once
 budget.reappropriation = Addition/<br/>Reduction
 budget.reappropriation.add.release = Add/Release from existing budget line item
+budget.reappropriation.add.release.cao.verify = Budget line item verification pending with CAO
+budget.reappropriation.add.release.acmc.verify = Budget line item verification pending with Additional Commissioner
+budget.reappropriation.add.release.mc.verify = Budget line item approval pending with Commissioner
 budget.reappropriation.add = Add new budget line item
 budget.reappropriation.invalid.combination = Budget Detail with this combination does not exist
 budget.reappropriation.title = Add  Budget Additional Appropriations
