--- a/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
@@ -58,6 +58,7 @@ lbl.description=Description
 lbl.ordernumber=Order Number
 lbl.caseType=Case Type
 lbl.edit=Edit
+lbl.update=Update
 lbl.status = Status
 lbl.active=Active
 title.interimorder.new=Create  Interim Order
@@ -308,3 +309,15 @@ lbl.reportstatus=Case Sub-status
 lbl.mesg.document=Please upload .doc, .docx, .xls, .xlsx, .rtf, .pdf, jpeg, .jpg, .png, .txt, .zip and .dxf format documents only
 
 lbl.standingcounselname=Defending Counsel Name
+lbl.create.library=Create Library
+lbl.library.details=Library Document Details
+lbl.document.details=Document Details
+lbl.document.type=Document Type
+lbl.attachment=Attachment
+lbl.uploaded.document=Uploaded Document
+
+title.library.new=Create Library 
+title.library.view=View Library 
+title.library.edit=Modify Library 
+title.library.result=Result Library 
+title.library.search=Search Library 
