Agenda_Branch_Updated Branch finalized

--- a/egov/egov-database/pom.xml
+++ b/egov/egov-database/pom.xml
@@ -112,6 +112,9 @@
                                 </resource>
                                 <resource>
                                     <directory>../egov-collection/src/main/resources/db/migration</directory>
+                                </resource>
+                                <resource>
+                                    <directory>../egov-lcms/src/main/resources/db/migration</directory>
                                 </resource>				
                                 <resource>
                                     <directory>../egov-council/src/main/resources/db/migration</directory>
