--- a/egov/egov-ear/pom.xml
+++ b/egov/egov-ear/pom.xml
@@ -86,10 +86,15 @@
             <version>${project.parent.version}</version>
             <type>war</type>
         </dependency>
+	    <dependency>
+            <groupId>org.egov</groupId>
+            <artifactId>egov-councilweb</artifactId>
+        	<version>${project.parent.version}</version>
+            <type>war</type>
+        </dependency>        
         <dependency>
             <groupId>org.egov</groupId>
             <artifactId>egov-lcmsweb</artifactId>
-	    <artifactId>egov-councilweb</artifactId>
             <version>${project.parent.version}</version>
             <type>war</type>
         </dependency>
@@ -133,7 +138,11 @@
         <dependency>
             <groupId>org.egov</groupId>
             <artifactId>egov-lcms</artifactId>
-	    <artifactId>egov-council</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.egov</groupId>
+            <artifactId>egov-council</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
        <dependency>
@@ -208,12 +217,12 @@
                             <groupId>org.egov</groupId>
                             <artifactId>egov-lcmsweb</artifactId>
                             <contextRoot>/services/lcms</contextRoot>
-                        </webModule>
-			<webModule>
+                    </webModule>
+                    <webModule>
                             <groupId>org.egov</groupId>
                             <artifactId>egov-councilweb</artifactId>
                             <contextRoot>/services/council</contextRoot>
-                        </webModule>
+                    </webModule>
                  	<webModule>
                             <groupId>org.egov</groupId>
                             <artifactId>egov-collectionweb</artifactId>
