--- a/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
@@ -315,9 +315,9 @@ lbl.document.details=Document Details
 lbl.document.type=Document Type
 lbl.attachment=Attachment
 lbl.uploaded.document=Uploaded Document
-
-title.library.new=Create Library 
-title.library.view=View Library 
-title.library.edit=Modify Library 
-title.library.result=Result Library 
-title.library.search=Search Library 
+lbl.library.search.result=Library Search Result
+title.library.new=Create Library
+title.library.view=View Library
+title.library.edit=Modify Library
+title.library.result=Result Library
+title.library.search=Search Library
