--- a/egov/egov-lcmsweb/src/main/resources/messages/message.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/message.properties
@@ -68,5 +68,5 @@ msg.advocateMaster.success=This Defending Counsel created successfully.
 msg.advocateMaster.update=Advocate Master Updated Successfully.
 msg.judgment.success=Judgment Created Successfully.
 msg.judgment.update=Judgment Updated Successfully.
-
-msg.library.success=Library Created Successfully.
+msg.library.success=Library Document Uploaded Successfully.
+msg.library.update=Library Document Updated Successfully.
