--- a/egov/egov-ear/pom.xml
+++ b/egov/egov-ear/pom.xml
@@ -86,6 +86,12 @@
             <version>${project.parent.version}</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>org.egov</groupId>
+            <artifactId>egov-auditweb</artifactId>
+            <version>${project.parent.version}</version>
+            <type>war</type>
+        </dependency>
      	<dependency>
             <groupId>org.egov</groupId>
             <artifactId>egov-collectionweb</artifactId>
@@ -121,6 +127,11 @@
         <dependency>
             <groupId>org.egov</groupId>
             <artifactId>egov-egf</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.egov</groupId>
+            <artifactId>egov-audit</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
        <dependency>
@@ -190,6 +201,11 @@
                             <groupId>org.egov</groupId>
                             <artifactId>egov-egfweb</artifactId>
                             <contextRoot>/services/EGF</contextRoot>
+                 	    </webModule>
+                 	    <webModule>
+                            <groupId>org.egov</groupId>
+                            <artifactId>egov-auditweb</artifactId>
+                            <contextRoot>/services/audit</contextRoot>
                  	    </webModule>
                  	    <webModule>
                             <groupId>org.egov</groupId>
