--- a/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
@@ -321,3 +321,10 @@ title.library.view=View Library
 title.library.edit=Modify Library
 title.library.result=Result Library
 title.library.search=Search Library
+lbl.is.department.acted=Is Concerned Department acted
+lbl.action.details=Action Details
+lbl.assigned.date=Assigned Date
+lbl.date.vakalaat.filed=Date on which Vakalaat filed
+lbl.senior.defending.counsel.required=Is Defending Counsel Required
+lbl.senior.defending.counsel=Senior Defending Counsel
+lbl.assignedon=Assigned On
