--- a/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
@@ -328,3 +328,6 @@ lbl.date.vakalaat.filed=Date on which Vakalaat filed
 lbl.senior.defending.counsel.required=Is Defending Counsel Required
 lbl.senior.defending.counsel=Senior Defending Counsel
 lbl.assignedon=Assigned On
+lbl.department=Department
+lbl.designation=Designation
+lbl.employee=Employee
