--- a/egov/egov-councilweb/src/main/resources/messages/message.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/message.properties
@@ -46,20 +46,20 @@
 #
 #
 
-msg.councilCaste.success=Council Caste details saved successfully.
+msg.councilCaste.success=Caste details saved successfully.
 msg.councilDesignation.success=Designation details saved successfully.
 msg.councilMember.success= Member details saved successfully.
 msg.councilRouter.success= Position Mapped successfully.
 msg.councilRouter.update.success= Position updated successfully.
 msg.councilParty.success=Party details saved successfully.
-msg.councilPreamble.create= Preamble details saved successfully. Record has been forwarded to {0} with preamble number {1}.
-msg.councilPreamble.success=Preamble number {0} is approved successfully.
-msg.councilPreamble.reject=Preamble number {0} is rejected successfully.
-msg.councilPreamble.forward=Preamble details saved successfully.Record has been forwarded to {1} with preamble number {0}.
-msg.councilPreamble.moreInfo= Preamble number {0} is forwarded back successfully for more information on preamble.
-msg.councilCommitteeType.success=Council Committee details saved successfully.
+msg.councilPreamble.create= Agenda details saved successfully. Record has been forwarded to {0} with agenda number {1}.
+msg.councilPreamble.success=Agenda number {0} is approved successfully.
+msg.councilPreamble.reject=Agenda number {0} is rejected successfully.
+msg.councilPreamble.forward=Agenda details saved successfully.Record has been forwarded to {1} with agenda number {0}.
+msg.councilPreamble.moreInfo= Agenda number {0} is forwarded back successfully for more information on agenda.
+msg.councilCommitteeType.success=Committee details saved successfully.
 msg.councilPreamble.update=Implementation status saved successfully.
-msg.councilPreamble.alreadyfinished=Council Preamble already finished.
+msg.councilPreamble.alreadyfinished=Agenda already finished.
 
 msg.no.attach.found= No Photo Attachment Found
 msg.invalid.agenda.details=Invalid request. Agenda details are not present.
@@ -73,5 +73,5 @@ msg.councilMeeting.attendance.success = Meeting attendance details saved success
 msg.attendance.not.finalizd = Attendance details are not captured or finalized. Please finalize attendance to create Meeting MOM.
 msg.attendance.already.finalizd=Attendance already finalized for selected meeting. You have no permission to modify Attendance.
 msg.committee.members.not.added = For selected committee type,committee members not included.So please add committee members to proceed further.
-msg.mom.create=Council MOM Resolutions document successfully generated and downloaded in your system.Please check in downloads of browser.
+msg.mom.create=MOM Resolutions document successfully generated and downloaded in your system.Please check in downloads of browser.
 msg.councilMeeting.cancel=Meeting is cancelled successfully.
