--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -342,6 +342,7 @@ msg.please.select.bank.account=Please Select the Bank Account
 msg.payment.amount.should.be.greater.than.zero=Payment Amount should be greater than zero!
 msg.enter.party.name.to.change=Enter Party Name to Chnage
 msg.insufficient.bank.balance=Insufficient Bank Balance.
+msg.sub.ledger.mandatory=Sub ledger entry is mandatory for RTGS and PEX mode of payment
 msg.insuff.bank.bal.do.you.want.to.process=Insufficient Bank Balance. Do you want to process ?
 msg.max.250.char.allowed.for.comment=Max 250 characters are allowed for comments. Remaining characters are truncated.
 msg.please.select.approver.dept=Please select the Approver Department.
