--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
@@ -199,7 +199,8 @@ bank=Bank
 bankaccount=Bank Account
 directbankpayment.transaction.success=Direct Bank Payment Transaction Successful and Vouchernumber is 
 cheque=Cheque
-cash=Cash
+#Previously Cash
+cash=Direct Bank
 rtgs=RTGS
 modeofpayment=Mode Of Payment
 account.number=Account Number
