--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -137,6 +137,8 @@ chq.assignment.instrument.amount=Cheque Amount
 chq.assignment.rtgs.amount=RTGS Amount
 chq.assignment.generic.amount=Amount
 chq.assignment.instrument.date=Cheque Date
+pex.assignment.instrumnt.date=PEX Date
+rtgs.assignment.instrumnt.date=RTGS Date
 chq.assignment.instrument.status=Status
 chq.assignment.instrument.action=Action
 chq.assignment.instrument.infavourof=In Favour Of
