mom workflow done.

--- a/egov/egov-councilweb/src/main/resources/messages/message.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/message.properties
@@ -75,3 +75,8 @@ msg.attendance.already.finalizd=Attendance already finalized for selected meetin
 msg.committee.members.not.added = For selected committee type,committee members not included.So please add committee members to proceed further.
 msg.mom.create=MOM Resolutions document successfully generated and downloaded in your system.Please check in downloads of browser.
 msg.councilMeeting.cancel=Meeting is cancelled successfully.
+
+msg.meetingmom.create= MoM details saved successfully. Record has been forwarded to {1} with meeting number {0}.
+msg.meetingmom.success=Mom of meeting number {0} is approved successfully.
+msg.meetingmom.reject=Mom of meeting number {0} is rejected successfully.
+msg.meetingmom.forward=MoM details saved successfully.Record has been forwarded to {1} with meeting number {0}.
