1st round of agenda branch

--- a/egov/egov-councilweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-councilweb/src/main/resources/messages/labels.properties
@@ -210,10 +210,10 @@ title.agenda.search.result=Agenda Search Result
 
 lbl.attendence.Detail=Attendence details not entered
 
-title.preamble.report=Agenda Wardwise Report
+title.preamble.report=Agenda Report
 lbl.mesg.document=Document size should not exceed 2 MB
 
-lbl.pramble.wardwise.report.title=Agenda Wardwise Report
+lbl.pramble.wardwise.report.title=Agenda Report
 lbl.dateofcreation=Date Of Creation
 lbl.used.in.agenda=Used in agenda(Y/N)
 label.attendance=Attendance
@@ -228,10 +228,10 @@ lbl.committee.members = Notification sent to following council members
 lbl.resolutiondate=Resolution Date
 
 lbl.meeting.count = Meeting Count
-lbl.total.preambles = Total Preambles
-lbl.approved.preambles = Approved Preambles
-lbl.adjourned.preambles = Adjourned Preambles
-lbl.rejected.preambles = Rejected Preambles
+lbl.total.preambles = Total Agendas
+lbl.approved.preambles = Approved Agendas
+lbl.adjourned.preambles = Adjourned Agendas
+lbl.rejected.preambles = Rejected Agendas
 lbl.title.meeting.details.report = Council Meeting Details Report
 lbl.total.members = Total Members
 lbl.present =No.Of Present
