Pre-Audit devleopment changes

--- a/egov/egov-auditweb/src/main/resources/messages/errors.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/errors.properties
@@ -26,12 +26,12 @@
 #
 #         1) All versions of this program, verbatim or modified must carry this
 #            Legal Notice.
-#            Further, all user interfaces, including but not limited to citizen facing interfaces,
-#            Urban Local Bodies interfaces, dashboards, mobile applications, of the program and any
+#            Further, all user interfaces, including but not limited to citizen facing interfaces, 
+#            Urban Local Bodies interfaces, dashboards, mobile applications, of the program and any 
 #            derived works should carry eGovernments Foundation logo on the top right corner.
 #
 #            For the logo, please refer http://egovernments.org/html/logo/egov_logo.png.
-#            For any further queries on attribution, including queries on brand guidelines,
+#            For any further queries on attribution, including queries on brand guidelines, 
 #            please contact contact@egovernments.org
 #
 #         2) Any misrepresentation of the origin of the material is prohibited. It
@@ -46,12 +46,6 @@
 #
 #
 
-budgetgroup.invalid.majorcode=This Major code is already mapped to {0} 
-budgetgroup.invalid.mincode=This Mincode is already mapped to {0}
-budgetgroup.invalid.maxcode=This Maxcode is already mapped to {0}
-budgetgroup.invalid.maxmincode=This Maxcode/Mincode is already mapped to {0}
-budgetgroup.invalid.majormincode= Cannot map the major code as few of its minor/detail codes are already used for this budget group
-budgetgroup.invalid.minmajorcode= Cannot map the min code as its major code are is mapped to {0} 
-budgetgroup.invalid.maxmajorcode= Cannot map the max code as its major code are is mapped to {0} 
-budget.invalid.parent=Parent Budget Should be a {0}
-budget.primary.invalid=Primary Budget for {0} already exists for the financial year {1}
+error.expense.bill.budgetcheck.insufficient.amount=There is no sufficient budget available for the budget combination to create this bill
+error.expense.bill.document.error=Unable to fetch documents
+error.financial.year.not.active=Financial Year is not active For Posting.
