--- a/egov/egov-auditweb/src/main/webapp/WEB-INF/web.xml
+++ b/egov/egov-auditweb/src/main/webapp/WEB-INF/web.xml
@@ -66,7 +66,22 @@
         <param-name>parentContextKey</param-name>
         <param-value>erpApplicationContext</param-value>
     </context-param>
-    <!-- Context Params Ends Filter Declaration Starts -->
+    <!-- Creates the Spring Container shared by all Servlets and Filters -->
+
+    <listener>
+
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+
+    </listener>
+
+    <!-- <listener>
+
+        <listener-class>org.egov.infra.web.listener.MDCLoggingCorrelationIDAssigner</listener-class>
+
+    </listener> -->
+
+
+
     <filter>
         <filter-name>CacheControlFilter</filter-name>
         <filter-class>org.egov.infra.web.filter.CacheControlFilter</filter-class>
@@ -87,10 +102,8 @@
         <filter-name>gzipFilter</filter-name>
         <filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
     </filter>
-    <filter>
-    	<filter-name>restAuthFilter</filter-name>
-    	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
+
+
     <filter>
         <filter-name>applicationCoreFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -115,35 +128,8 @@
         <filter-name>springSessionRepositoryFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
-    <filter>
-        <filter-name>sessionAttributeHandlerFilter</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter>
-        <filter-name>ResponseOverrideFilter</filter-name>
-        <filter-class>org.displaytag.filter.ResponseOverrideFilter</filter-class>
-    </filter>
-    <filter>
-        <filter-name>struts2Prepare</filter-name>
-        <filter-class>org.apache.struts2.dispatcher.filter.StrutsPrepareFilter</filter-class>
-    </filter>
-    <filter>
-        <filter-name>struts2Execute</filter-name>
-        <filter-class>org.apache.struts2.dispatcher.filter.StrutsExecuteFilter</filter-class>
-    </filter>
-    <filter>
-        <filter-name>sitemesh</filter-name>
-        <filter-class>com.opensymphony.sitemesh.webapp.SiteMeshFilter</filter-class>
-    </filter>
-    <filter>
-        <filter-name>MultipartFilter</filter-name>
-        <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
-    </filter>
-    <!-- Filter Declaration Ends Filter Mapping Starts -->
-    <filter-mapping>
-        <filter-name>MultipartFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+
+
     <filter-mapping>
         <filter-name>springSessionRepositoryFilter</filter-name>
         <url-pattern>/*</url-pattern>
@@ -153,6 +139,22 @@
     <filter-mapping>
         <filter-name>CacheControlFilter</filter-name>
         <url-pattern>*.js</url-pattern>
+        <url-pattern>*.css</url-pattern>
+
+        <url-pattern>*.jpg</url-pattern>
+
+        <url-pattern>*.png</url-pattern>
+
+        <url-pattern>*.gif</url-pattern>
+
+        <url-pattern>*.ico</url-pattern>
+
+        <url-pattern>*.ttf</url-pattern>
+
+        <url-pattern>*.map</url-pattern>
+
+        <url-pattern>*.woff2</url-pattern>
+
     </filter-mapping>
     <filter-mapping>
         <filter-name>CharacterEncodingFilter</filter-name>
@@ -174,10 +176,8 @@
         <filter-name>securityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    <filter-mapping>
-    	<filter-name>restAuthFilter</filter-name>
-    	<url-pattern>/rest/*</url-pattern>
-    </filter-mapping>
+
+
     <filter-mapping>
         <filter-name>applicationCoreFilter</filter-name>
         <url-pattern>/*</url-pattern>
@@ -188,34 +188,8 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter-mapping>
-        <filter-name>ResponseOverrideFilter</filter-name>
-        <url-pattern>*.do</url-pattern>
-        <url-pattern>*.jsp</url-pattern>
-        <url-pattern>*.action</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>struts2Prepare</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>sitemesh</filter-name>
-        <url-pattern>*.action</url-pattern>
-        <url-pattern>*.do</url-pattern>
-        <url-pattern>*.jsp</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>struts2Execute</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <!-- Filter Mapping Ends Listeners Starts -->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-    <listener>
-        <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
-    </listener>
-    <!-- Listeners Ends Servlet Declaration Starts -->
+    <!-- Processes application requests -->
+
     <servlet>
         <servlet-name>auditweb</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -232,31 +206,6 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <servlet>
-        <servlet-name>reportViewer</servlet-name>
-        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
-        <load-on-startup>0</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>action</servlet-name>
-        <url-pattern>*.do</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>reportViewer</servlet-name>
-        <url-pattern>/reportViewer</url-pattern>
-    </servlet-mapping>
-    <session-config>
-        <cookie-config>
-            <path>/</path>
-            <http-only>true</http-only>
-            <secure>false</secure>
-        </cookie-config>
-        <tracking-mode>COOKIE</tracking-mode>
-    </session-config>
-    <welcome-file-list>
-        <welcome-file>/index.jsp</welcome-file>
-    </welcome-file-list>
-    <!-- Servlet Declaration Ends -->
     <jsp-config>
         <taglib>
             <taglib-uri>http://tiles.apache.org/tags-tiles</taglib-uri>
