--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/package.properties
@@ -83,3 +83,5 @@ label.txnNumber=Txn Number
 label.txnDate=Txn Date
 label.referenceNumber=Reference Number
 label.instrumentType=Intrument Type
+
+msg.please.select.approver=Please Select the Approver
