--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
@@ -364,4 +364,5 @@ msg.source.not.available=Source is not available
 msg.max.120.character.are.allowed.remaining.chars.will.truncated=Max 1024 characters are allowed for comments. Remaining characters are truncated.
 msg.please.select.approver.department=Please select the Approver Department
 msg.please.select.approver.designation=Please select the approver designation
+msg.please.select.approver=Please Select the Approver
 
