--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/bill/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/bill/package.properties
@@ -109,3 +109,4 @@ msg.please.select.functionary=Please select a functionary
 msg.please.select.fund.source=Please select a fundsource
 msg.please.select.field=Please select a field
 
+msg.please.select.approver=Please Select the Approver
