--- a/egov/egov-auditweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/labels.properties
@@ -550,4 +550,10 @@ title.approvebudget.search.acmc=Verify Uploaded Budget
 lbl.schdauditdate=Audit Scheduled Date
 lbl.auditnumber=Audit Number
 lbl.auditType=Audit Type
+lbl.checklist.name=Name
+lbl.checklist.status=Status
+lbl.checklist.usercomments=User Comments
+lbl.checklist.auditcomments=Audit Comments
+lbl.billDetails=Bill Details
+lbl.save.button=Save
 
