--- a/egov/egov-auditweb/src/main/resources/messages/message.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/message.properties
@@ -134,3 +134,8 @@ msg.type.first.3.letters.of.account.code=Type first 3 letters of Account code
 msg.no.documents=No Documents Attached
 msg.uploaded.budget.cao.success = Uploaded budget verified and sent to Additional Commissioner for further verification 
 msg.uploaded.budget.acmc.success = Uploaded budget verified and sent to Commissioner for Approval
+msg.expense.audit.create.success=Audit number {0} is created successfully
+msg.expense.audit.approved.success=Expense number {0} approved successfully.
+msg.expense.audit.reject=Audit number {0} has been rejected and forwarded to {1} - {2}
+msg.expense.audit.cancel=Audit number {0} has been cancelled successfully.
+
