changes in LCMS and apnimandi

--- a/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/labels.properties
@@ -113,7 +113,7 @@ lbl.fieldbycarp=Filed by ULB
 lbl.createlegal=Legal Information
 lbl.orderNumber=Order Number
 title.legalCase.view=View Legal case
-lbl.casecatagory=Case Category
+lbl.casecatagory=Case Type
 title.createCaseType=Case Type
 title.standingCouncil=Add/Edit StandingCounsel
 lbl.reappealofcase=Is Re appeal of Case
@@ -277,7 +277,7 @@ title.duereport=Reports Between Due Dates
 title.viewcase=View LegalCase Details
 title.pwrduereport=Report on PwrDue
 title.dailyboardreport=Daily Board Report
-lbl.casecategory=Case Category
+lbl.casecategory=Case Type
 lbl.departmentname=Department Name
 lbl.reportgeneration=Report generated on 
 title.timeseriesreport=Time Series Report
