jasper issue fixes & ckeditor implemented-agenda

--- a/egov/egov-egi/src/main/resources/config/application-config.properties
+++ b/egov/egov-egi/src/main/resources/config/application-config.properties
@@ -421,7 +421,7 @@ egov.services.master.mdms.search.url=egov-mdms-service/v1/_search
 
 egov.services.egov-indexer.url=egov-indexer/index-operations/{financeTopic}/_index
 
-city_logo_aws_url=https://s3.ap-south-1.amazonaws.com/pb-egov-assets/tenantid/logo.png
+city_logo_aws_url=https://mcchuatchuatcentralindia.blob.core.windows.net/digit/logo.png
 
 egov.finance.rollout.indexer.topic.name=finance-adoption-topic
 egov.finance.indexer.egbill.topic.name=finance-bill-topic
