Voucher and Advice Report

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -62,6 +62,7 @@ payment.modify.success=Payment voucher updated successfully
 payment.mode=Mode of Payment
 payment.invalid.user=Current user doesn't have the permission to create the payment
 bank.advice.report=Bank Advice Report
+bank.advice.report.title= Bank Advice Report for RTGS/PEX
 payment.tneb.bill.region =TNEB Region
 tnebpayment.monthyear = Month/Year
 total = Total
