--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/report/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/report/package.properties
@@ -100,7 +100,7 @@ report.fromdate=From Date
 report.todate=To Date
 report.run.date=Report Run Date
 bank.advice.report=Bank Advice Report
-
+bank.advice.report.title= Bank Advice Report for RTGS/PEX
 budget.proposal.status.report=Budget Proposal Status Report
 report.Department.report=Department
 report.hod=HOD
