Finance Issue Fix

--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/deduction/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/deduction/package.properties
@@ -105,3 +105,5 @@ msg.max.1024.char.allowed.rest.will.truncated=Max 1024 characters are allowed fo
 msg.insufficient.bank.balance=Insufficient Bank Balance.....
 msg.sub.ledger.mandatory=Sub ledger entry is mandatory for RTGS and PEX mode of payment
 msg.insuff.bank.bal.do.you.want.to.process=Insufficient Bank Balance. Do you want to process?
+msg.payment.narration.mandatory=Narration is mandatory
+lbl.narration=Narration
