--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/voucher/package.properties
@@ -365,4 +365,5 @@ msg.max.120.character.are.allowed.remaining.chars.will.truncated=Max 1024 charac
 msg.please.select.approver.department=Please select the Approver Department
 msg.please.select.approver.designation=Please select the approver designation
 msg.please.select.approver=Please Select the Approver
-
+msg.please.enter.voucher.narration=Please enter Narration
+msg.please.select.voucher.narration=Please enter narration
