--- a/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
+++ b/egov/egov-egfweb/src/main/java/org/egov/egf/web/actions/payment/package.properties
@@ -335,7 +335,6 @@ msg.you.can.select.max.125.bills.for.single.payment=You can select Maximum of 12
 msg.no.record.found=No Records Found
 msg.payment.amount.should.be.numeric.value=Payment amount should be a numeric value.
 msg.payment.should.not.be.greater.than.payable.amount=Payment amount should not be greater than Payable amount
-msg.please.select.voucher.date=Please Select the Voucher Date!!
 msg.please.select.department=Please Select the Department!!
 msg.please.select.function=Please Select the Function!!
 msg.please.enter.voucher.number=Please Enter voucher number
@@ -387,8 +386,8 @@ chq.assignment.pex.amount=PEX Amount
 surrender.pex=Surrender PEX
 pex=PEX
 pex.transaction.success=Processing done successfully
-
-
+msg.please.select.voucher.narration=Please enter narration
+msg.payment.narration.mandatory=Narration is mandatory
 
 
 
