Changes in LCMS requested by client

--- a/egov/egov-lcmsweb/src/main/resources/messages/errors.properties
+++ b/egov/egov-lcmsweb/src/main/resources/messages/errors.properties
@@ -57,3 +57,4 @@ ValidateDate.Appeal.appealFiledOn=Future Date is not allowed For Appeal filed On
 validatedate.hearing.futuredate=Hearing with future date already present.
 validatedate.hearing.casedate=Hearing date should be greater than case date.
 error.legalcase.casenumber=Entered Case Number already exist.
+error.legalcase.filenumber=Entered File Number already exist.
