--- a/egov/pom.xml
+++ b/egov/pom.xml
@@ -218,6 +218,7 @@
         <jsoup-version>1.10.3</jsoup-version>
         <jython-version>2.7.1b3</jython-version>
         <flyway-core-version>5.0.3</flyway-core-version>
+        <chd-default-schema>ch.chandigarh</chd-default-schema>
         <junit-version>4.12</junit-version>
         <mockito-all-version>1.10.19</mockito-all-version>
         <springockito-version>1.0.9</springockito-version>
