--- a/egov/egov-ear/pom.xml
+++ b/egov/egov-ear/pom.xml
@@ -91,7 +91,13 @@
             <artifactId>egov-councilweb</artifactId>
         	<version>${project.parent.version}</version>
             <type>war</type>
-        </dependency>        
+        </dependency>
+			<dependency>
+            <groupId>org.egov</groupId>
+            <artifactId>egov-worksweb</artifactId>
+        	<version>${project.parent.version}</version>
+            <type>war</type>
+        </dependency> 
         <dependency>
             <groupId>org.egov</groupId>
             <artifactId>egov-lcmsweb</artifactId>
@@ -149,6 +155,11 @@
         <dependency>
             <groupId>org.egov</groupId>
             <artifactId>egov-council</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+		<dependency>
+            <groupId>org.egov</groupId>
+            <artifactId>egov-works</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
        <dependency>
