Post audit fixes

--- a/egov/egov-auditweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/labels.properties
@@ -64,3 +64,15 @@ lbl.view.status=Status
 lbl.department=Department
 lbl.comments=Comments
 lbl.nohistorydetails.code=No History Details
+lbl.expType=Expenditure Type
+lbl.dateFrom=Bill Date From
+lbl.dateTo=Bill Date To
+lbl.selectAll=Select All
+lbl.expenditure.type=Expenditure Type
+lbl.bill.type=Bill Type
+lbl.bill.amount=Bill Amount
+lbl.passed.amount=Passed Amount
+lbl.bill.status=Bill Status
+lbl.owner.name=Owner Name
+
+
