Post Audit & Issue Fixes

--- a/egov/egov-auditweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-auditweb/src/main/resources/messages/labels.properties
@@ -52,7 +52,7 @@ lbl.auditnumber=Audit Number
 lbl.auditType=Audit Type
 lbl.checklist.name=Name
 lbl.checklist.status=Status
-lbl.checklist.usercomments=User Comments
+lbl.checklist.usercomments=Department Comments
 lbl.checklist.auditcomments=Audit Comments
 lbl.billDetails=Bill Details
 lbl.save.button=Save
@@ -70,9 +70,22 @@ lbl.dateTo=Bill Date To
 lbl.selectAll=Select All
 lbl.expenditure.type=Expenditure Type
 lbl.bill.type=Bill Type
+lbl.bill.date=Bill Date
+bill.search.billnumber=Bill Number
 lbl.bill.amount=Bill Amount
 lbl.passed.amount=Passed Amount
 lbl.bill.status=Bill Status
 lbl.owner.name=Owner Name
+lbl.serial=Sl.No.
+lbl.billNumber=Bill Number
+lbl.voucher=Bill Voucher Number
+lbl.payment.voucher=Payment Voucher Number
+lbl.audit.dateFrom=Audit Date From
+lbl.audit.dateTo=Audit Date To
+
+
+
+
+
 
 
