--- a/egov/egov-egi/src/main/resources/config/application-config.properties
+++ b/egov/egov-egi/src/main/resources/config/application-config.properties
@@ -51,7 +51,7 @@
 #-----------------------------------Common Settings Starts------------------------------------#
 
 #Enable/Disable dev mode, this must be set to false in all non dev environments
-dev.mode=false
+dev.mode=true
 
 #Electing a server as master, ensure this is set to true on any one server in a multi server hosted environment
 master.server=true
@@ -246,7 +246,7 @@ default.jdbc.jndi.datasource=java:/READWRITE_DS
 default.jdbc.jndi.readonly.datasource=java:/READONLY_DS
 
 #Default schema name used across erp
-default.schema.name=ch.chandigarh
+default.schema.name=generic
 
 #-----------------------------------Datasource Settings Ends------------------------------------#
 
@@ -263,7 +263,7 @@ scheduler.enabled=false
 scheduler.clustered=false
 
 #Quartz table prefix, must prefixed with default schema name (see : default.schema.name)
-scheduler.default.table.prefix="ch.chandigarh".qrtz_
+scheduler.default.table.prefix=generic.qrtz_
 
 #Default JNDI from quartz non transactional datasource
 scheduler.datasource.jndi.url=java:/QUARTZ_NO_TXN_DS
@@ -312,7 +312,7 @@ db.flyway.statewide.migration.file.path=classpath:/db/migration/statewide/
 statewide.migration.required=false
 
 #Schema name where statewide migration to be executed, value must be your default schema name (see default.schema.name)
-statewide.schema.name=ch.chandigarh
+statewide.schema.name=generic
 
 #-----------------------------------DB Migration Settings Ends-----------------------------------#
 
@@ -365,18 +365,18 @@ analytics.config=
 #-----------------------------------Microservice Settings Starts--------------------------------#
 egov.collection.version=V2
 
-egov.default.services.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.hrms.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.accesscontrol.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.hr.masters.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.user.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.common.masters.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.billing.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.collection.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.egf.master.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.egf.instrument.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.mdms.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
-egov.indexer.service.endpoint=https://egov-uat.chandigarhsmartcity.in/
+egov.default.services.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.hrms.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.accesscontrol.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.hr.masters.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.user.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.common.masters.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.billing.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.collection.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.egf.master.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.egf.instrument.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.mdms.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
+egov.indexer.service.endpoint=https://egov-dev.chandigarhsmartcity.in/
 
 egov.services.user.approvers.url=egov-hrms/employees/_search
 
