--- a/egov/egov-egfweb/src/main/resources/messages/labels.properties
+++ b/egov/egov-egfweb/src/main/resources/messages/labels.properties
@@ -544,3 +544,6 @@ lbl.sdocuments.value=Download
 lbl.sdocuments.name=UploadedDocuments
 title.approvebudget.search.cao=Verify Uploaded Budget
 title.approvebudget.search.acmc=Verify Uploaded Budget
+lbl.bill.sanction.number=Sanction Number
+lbl.bill.sanction.date=Sanction Date
+
