--- a/egov/egov-worksweb/src/main/webapp/WEB-INF/web.xml
+++ b/egov/egov-worksweb/src/main/webapp/WEB-INF/web.xml
@@ -214,9 +214,9 @@
     <listener>
         <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
     </listener>
-    <listener>
+    <!-- <listener>
         <listener-class>org.egov.infra.web.listener.MDCLoggingCorrelationIDAssigner</listener-class>
-    </listener>
+    </listener> -->
     <!-- Listeners Ends Servlet Declaration Starts -->
     <servlet>
         <servlet-name>reportViewer</servlet-name>
